fix: fix for edge (#104); window scrollbar (#98)

--- a/src/window.scss
+++ b/src/window.scss
@@ -6,17 +6,40 @@
       @apply bg-black bg-opacity-80;
     }
 
-    .window-outerwrapper {
-      @apply max-w-screen-md p-6;
-    }
-
     .window-wrapper {
-      @apply bg-black bg-opacity-70 rounded-lg p-4 relative pointer-events-auto text-white;
+      @apply max-h-full max-w-screen-md bg-black bg-opacity-70 rounded-lg px-2 py-4 relative;
 
       opacity: 1;
       animation-name: bounceInDown;
       animation-iteration-count: 1;
       animation-duration: 0.8s;
+    }
+
+    .window-innerwrapper {
+      @apply overflow-y-auto px-4 pointer-events-auto text-white;
+      max-height: calc(100vh - 2em);
+
+      @supports selector(::-webkit-scrollbar) {
+        &::-webkit-scrollbar {
+          width: 10px;
+        }
+        &::-webkit-scrollbar-track {
+          margin-top: 1.5rem;
+          border-radius: 8px;
+          background: #964e4e;
+          box-shadow: 0px 0px 6px 2px rgba(255, 255, 255, 0.5) inset;
+        }
+        &::-webkit-scrollbar-thumb {
+          border-radius: 8px;
+          background-color: #d55959;
+          box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.5) inset;
+        }
+      }
+
+      @supports not selector(::-webkit-scrollbar) {
+        scrollbar-color: #d55959 transparent;
+        scrollbar-width: thin;
+      }
     }
 
     p {
@@ -68,8 +91,7 @@
     }
 
     .version {
-      @apply absolute ltr:right-10 rtl:left-10;
-      top: 42px;
+      @apply ltr:float-right rtl:float-left ltr:mr-4 rtl:ml-4 -mt-5 font-mono;
     }
 
     h3 {
@@ -100,7 +122,7 @@
         @apply bg-green-500 hover:bg-green-400 border-green-700 hover:border-green-500 border-b-0;
       }
       &.cancel:enabled {
-        @apply bg-red-500 hover:bg-red-400 border-red-700 hover:border-red-500 absolute w-12 h-12 -top-6 ltr:-right-6 rtl:-left-6 bg-no-repeat bg-contain bg-center;
+        @apply bg-red-500 hover:bg-red-400 border-red-700 hover:border-red-500 absolute w-12 h-12 -top-4 ltr:-right-4 rtl:-left-4 bg-no-repeat bg-contain bg-center;
         background-image: url('../assets/img/x.svg');
       }
       &:active {
@@ -251,8 +273,8 @@
         }
       }
 
-      #opponentNotification {
-        @apply font-normal text-gray-400 px-1 text-sm;
+      #against-human-or-ai {
+        @apply font-normal text-gray-400 ltr:pl-1 rtl:pl-5 ltr:pr-5 rtl:pr-1 text-sm;
       }
 
       .multiplayer {
